<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@color/dim_foreground_material_light"
    >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="18dp"
        >

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_default_picture"
            android:contentDescription="@string/app_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="17sp"
                android:textColor="@color/clr_white_full"
                />

            <TextView
                android:id="@+id/tvHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/hub"
                android:textSize="14sp"
                android:textColor="@color/clr_white_full"
                android:singleLine="true" >
            </TextView>

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/url"
                android:textSize="14sp"
                android:textColor="@color/clr_white_full"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/desc"
                android:textSize="14sp"
                android:textColor="@color/clr_white_full"
                />

            <TextView
                android:id="@+id/tvStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/stats"
                android:textSize="14sp"
                android:textColor="@color/clr_white_full"
                android:singleLine="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                >

                <TextView
                    android:id="@+id/tvEdits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/edits"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/tvArticles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/articles"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/tvPages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/pages"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    />

                <TextView
                    android:id="@+id/tvUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/users"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/tvActiveUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/active_users"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/tvImages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/images"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    />

                <TextView
                    android:id="@+id/tvVideos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/videos"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/tvAdmins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/admins"
                    android:textSize="14sp"
                    android:textColor="@color/clr_white_full"
                    />

            </LinearLayout>

        </LinearLayout>
	
	</LinearLayout>
								
</ScrollView>